Upgrade to Gradle 4.7 and prepare for Java 10.